# scene-smith

./: .env.example  .gitignore  crew.py  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  main.py  pyproject.toml
agents/: architect.py  character_creator.py  dialogue.py  dramaturge.py  reviewer.py
utils/: cost_tracker.py  logging_config.py  memory.py  model_factory.py  prompts.py
