[tool.poetry]
name = "scene-smith"
version = "0.1.0"
description = "Autonomous AI screenwriting application using CrewAI and LangChain"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false



[tool.poetry.dependencies]
python = "^3.10,<3.14"
crewai = "0.134.0"
langchain = "0.3.26"
langchain-openai = "0.3.26"
faiss-cpu = "^1.7.4"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
langchain-community = "^0.3.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
langchain-cli = "^0.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


